<?xml version="1.0"?>
<package>
  <name>csapex_testing</name>
  <version>0.9.6</version>
  <description>The csapex package provides the test framework of CS::APEX</description>

  <maintainer email="mail@betwo.eu">Sebastian Buck</maintainer>

  <license>BSD</license>

  <author email="mail@betwo.eu">Sebastian Buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex</build_depend>

  <run_depend>csapex</run_depend>
</package>
